--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,9 +1,14 @@
 {{- range $deploymentKey, $deploymentVal := .Values.deployments }}
 {{- $p := dict "deploymentKey" $deploymentKey }}
-{{- $_ := merge $p . $.Values }}
+{{- $_ := set $p "Chart" $.Chart }}
+{{- $_ := set $p "Release" $.Release }}
+{{- $_ := merge $p . }}
+{{- $_ := merge $p $.Values }}
 ---
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: {{ template "repro.fullname" $p }}
+  role: {{ $p.role }}
+  someSetting: {{ $p.someSetting }}
 {{ end }}
